--- a/package.json
+++ b/package.json
@@ -95,6 +95,8 @@
     "miniprogram-api-typings": "*",
     "postcss-comment": "^2.0.0",
     "prettier": "^2.5.1",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
