--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "dependencies": {
     "@dcloudio/uni-app-plus": "^2.0.1-33520211229002",
     "@dcloudio/uni-h5": "^2.0.1-33520211229002",
-    "@dcloudio/uni-helper-json": "*",
+    "@dcloudio/uni-helper-json": "^1.0.13",
     "@dcloudio/uni-i18n": "^2.0.1-33520211229002",
     "@dcloudio/uni-mp-360": "^2.0.1-33520211229002",
     "@dcloudio/uni-mp-alipay": "^2.0.1-33520211229002",
@@ -64,6 +64,7 @@
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
     "regenerator-runtime": "^0.12.1",
+    "uview-ui": "^2.0.19",
     "vue": "^2.6.11",
     "vuex": "^3.2.0"
   },
