feat:添加对alias的支持

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,14 @@
       "@dcloudio/types",
       "miniprogram-api-typings",
       "mini-types"
-    ]
-  }
+    ],
+    "target": "ES6",
+    "module": "commonjs",
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "./",
+    "paths": {          
+      "@/*": ["src/*"]
+    }
+  },
+  "exclude": ["node_modules", "dist"]
 }
